# esp32

./: .gitignore
config-project/: CMakeLists.txt  sdkconfig  sdkconfig.old
config-project/main/: main.c
esptimer/: CMakeLists.txt  sdkconfig  sdkconfig.old
esptimer/main/: CMakeLists.txt  main.c
event_loop/user_evt_loop/: CMakeLists.txt  sdkconfig  sdkconfig.old
i2c/: sdkconfig  sdkconfig.old
i2c/components/: CMakeLists.txt
i2c/components/at24cxx-main/interface/: driver_at24cxx_interface_template.c
i2c/main/: main.c
key_dev/: CMakeLists.txt
key_dev/components/: CMakeLists.txt
key_dev/components/key_dev/: key.c  key.h  key_cfg.h  key_dev.c  key_dev.h  key_dev_cfg.h
key_dev/components/key_dev/atk_denesp32s3_key/: atk_denesp32s3_key.c  atk_denesp32s3_key.h  atk_denesp32s3_key_cfg.h
key_dev/main/: main.c
led/led/: CMakeLists.txt  sdkconfig.old
led_dev/: CMakeLists.txt  sdkconfig
led_dev/components/: CMakeLists.txt
led_dev/main/: main.c
uart_dev/: CMakeLists.txt
uart_dev/components/: CMakeLists.txt
uart_dev/components/uart_dev/: uart.c  uart.h  uart_cfg.h  uart_dev.c  uart_dev.h  uart_dev_cfg.h
uart_dev/components/uart_dev/atk_denesp32s3_uart_dev/: atk_denesp32s3_uart_dev.c  atk_denesp32s3_uart_dev.h  atk_denesp32s3_uart_dev_cfg.h
uart_dev/components/uart_dev/stm32_uart_dev/: stm32_uart_dev.c  stm32_uart_dev.h  stm32_uart_dev_cfg.h
uart_dev/main/: main.c
uart_dev/tool/: create_c_template.py  series.py
wifi/wifi_scan/: CMakeLists.txt  sdkconfig  sdkconfig.old
wifi/wifi_station/: CMakeLists.txt  sdkconfig  sdkconfig.old
(+14 files in other folders)
